--- a/index.html
+++ b/index.html
@@ -30,15 +30,31 @@
     <div class="collapse navbar-collapse" id="navbar">
         <ul class="menu">
             <li class="link"><a href="#welcome">St Xavier's School</a></li>
-            <li class="link"><a href="#videos">Campus life</a></li>
-            <li class="link"><a href="#work">Achievements</a></li>
-            <li class="link"><a href="#writings">What's new</a></li>
+            <li class="link"><a href="#life">Campus life</a></li>
+            <li class="link"><a href="#achievements">Achievements</a></li>
+            <li class="link"><a href="#new">What's new</a></li>
             <li class="link"><a href="#contact">Contact us</a></li>
         </ul>
     </div>
 </nav>
 
-<iframe width="652" height="480" src="https://www.youtube.com/embed/u0-szsoiWcQ" title="low poly cat spin to funkytown for 1 hour" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"></iframe>
+<iframe width="652" height="480" src="https://www.youtube.com/embed/u0-szsoiWcQ" title="low poly cat spin to funkytown for 1 hour" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+
+<section id="life">
+    <img src="church.jpg">
+    <kbd>church</kbd>
+    <p>School church was built in 1902</p>
+
+    
+    <img src="st2.jpg">
+    <kbd>Library</kbd>
+    <p>Library was built in 1970</p>
+
+    <img src="st3.jpg">
+    <kbd>Auditorium</kbd>
+    <p>Auditorium was built in 1904 shortly after the church but has been renovated few times</p>
+</section>
+
 
 
 </body>
