--- a/index.html
+++ b/index.html
@@ -42,21 +42,59 @@
 
 <section id="life">
     <img src="church.jpg">
-    <kbd>church</kbd>
+    <div><kbd>Church</kbd></div>
     <p>School church was built in 1902</p>
 
-    
     <img src="st2.jpg">
-    <kbd>Library</kbd>
+    <div><kbd>Library</kbd></div>
     <p>Library was built in 1970</p>
 
     <img src="st3.jpg">
-    <kbd>Auditorium</kbd>
+    <div><kbd>Auditorium</kbd></div>
     <p>Auditorium was built in 1904 shortly after the church but has been renovated few times</p>
 </section>
 
+<section>
+    <h2 class="page-header" id="Achievements">School Achievements</h2>
 
+    <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school-achievements-debate">
+        Interschool Debate on Environmental Pollution<i class="fa fa-sort-desc"></i>
+    </div>
 
+    <div id="school-achievements-debate" class="collapse">
+
+        <div class="achievement-text">
+            <img src="se1.jpg" class="img-responsive img-thumbnail">
+            <h5 class="text-success text-capitalize">Won first prize in interschool debate on environmental pollution
+                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star"></span>
+            </h5>
+        </div>
+
+    </div>
+
+    <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school-achievements-balls">
+        Interschool Football Competition<i class="fa fa-sort-desc"></i>
+    </div>
+
+    <div id="school-achievements-balls" class="collapse">
+
+        <div class="achievement-text">
+            <img src="sm2.jpg" class="img-responsive img-thumbnail">
+            <h5 class="text-success text-capitalize">Won first prize in interschool football competition
+                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star"></span>
+            </h5>
+        </div>
+
+    </div>
+</section>
 </body>
 
 </html>
