--- a/index.html
+++ b/index.html
@@ -95,6 +95,46 @@
 
     </div>
 </section>
+
+<section>
+    <h2 class="page-header" id="whatsnew">What's New</h2>
+    <ul class="list-group">
+        <li class="list-group-success list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+            <h4>New school canteen</h4>
+            <img src="canteen.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+            <p class="list-group-item-text col-lg-7 col-md-7 col-xs-12">The food options and responsibilities to consider, canteens must be better organized and more efficient than they have been in the past. Onlin emenus with photographs of the meals prepared, and detailed descriptions of their ingredients help both students and parents make the right nutritional choices.</p>
+        </li>
+    </ul>
+    <h2 class="page-header" id="whatsnew">What's New</h2>
+    <ul class="list-group">
+        <li class="list-group-success list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+            <h4>Implemented online attendance management system</h4>
+            <img src="attendance.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+            <p class="list-group-item-text col-lg-7 col-md-7 col-xs-12">Humans are prone to error, even if we provide them with suppoting computational devices. Automated attendance management systems ensure accurate time records and minimize the inevitable and costly errors with manual data entry. This accurate data thereby helps to provide accurate performance and payroll data.</p>
+        </li>
+    </ul>
+</section>
+
+<section id="contact">
+    <iframe src="https://www.google.com/maps/place/Amogus+Sussy+School/@43.5478348,5.1871964,17z/data=!3m2!4b1!5s0x12c9fae35c79ace5:0xf77cd38ff7592679!4m6!3m5!1s0x12c9fae4c30957b9:0x2afe2c96985c5aed!8m2!3d43.5478309!4d5.1897713!16s%2Fg%2F1tl5cd_s?entry=ttu" height="450" frameborder="0" allowfullscreen="">        
+    </iframe>
+    <hr>
+    <img src="sp.png" class="img-responsive img-circle col-lg-3 col-sm 3 col-xs-4">
+    <h3>Principal Name: </h3>
+    <h4>Freddy Fazbear</h4>
+
+    <div class="contact1">
+        <a href="mailto:mygmail.com?Subject=OhCholeraCzyToFreddyFazbear">
+            <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;school@gmail.com</h5>
+        </a>
+        <a href="#">
+            <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;be_quiet_shao</h5>
+        </a>
+        <a href="#">
+            <h5><i class="fa fa-phone-square"></i>&nbsp;&nbsp;69694200</h5>
+        </a>
+    </div>
+</section>
 </body>
 
 </html>
